name:                envdir
version:             0.1.0.0
synopsis:            A attempt to replicate envdir in Haskell
homepage:            https://github.com/hectcastro/envdir
license:             Apache-2.0
license-file:        LICENSE
author:              Hector Castro
maintainer:          hector@castro.io
copyright:           2017 Hector Castro
category:            System
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable envdir
  hs-source-dirs:      src
  other-modules:       Runner
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , directory >= 1.3 && < 2
                     , filepath >= 1.4 && < 2
                     , process >= 1.4 && < 2
                     , text >= 1.2 && < 2
                     , containers >= 0.5 && < 1
